--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@muozalp/ui-kit",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "files": [
     "dist"
   ],
-  "main": "./dist/@muozalp/ui-kit.umd.cjs",
-  "module": "./dist/@muozalp/ui-kit.js",
+  "main": "dist/@muozalp/ui-kit.umd.cjs",
+  "module": "dist/@muozalp/ui-kit.esm.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/@muozalp/ui-kit.js",
+      "import": "./dist/@muozalp/ui-kit.esm.js",
       "require": "./dist/@muozalp/ui-kit.umd.cjs"
     },
     "./style.css": "./dist/index.css"
   },
-  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/muozalp/ui-kit"
@@ -76,6 +76,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
+    "vite-plugin-static-copy": "^1.0.5",
     "vitest": "^1.4.0",
     "vue-tsc": "^2.0.11"
   }
